import aQute.bnd.version.MavenVersion
import me.champeau.gradle.ArtifactJapicmpTask
import org.semanticweb.owlapi.gradle.osgi.BundleTask
import org.semanticweb.owlapi.gradle.osgi.OSGIWrapTask

buildscript {
    repositories {
        jcenter()
        mavenCentral()
        mavenLocal()
        maven {
            url "https://plugins.gradle.org/m2/"
        }

    }
    dependencies {
        classpath fileTree('buildSrc/lib/')
//        classpath 'me.champeau.gradle:japicmp-gradle-plugin:latest.integration'
//        classpath 'biz.aQute.bnd:biz.aQute.bnd.gradle:5.2.0'
    }
}

plugins {
  id 'com.github.ben-manes.versions' version '0.42.0'
}

allprojects {
//    apply plugin: 'maven'
    apply plugin: 'eclipse'

    group = 'net.sourceforge.owlapi'
    version = '6.0.0-SNAPSHOT'
    ext {
        baselineVersion = '5.5.0'
    }

}

subprojects {
    repositories {
        mavenLocal()
        mavenCentral()
//        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
    }

    apply plugin: 'java'
    sourceCompatibility = 17
    targetCompatibility = 17
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
//    apply plugin: 'me.champeau.gradle.japicmp'

    task packageSources(type: Jar) {

        classifier = 'sources'
        from sourceSets.main.allSource
    }
    task packageJavadoc(type: Jar) {
        dependsOn javadoc
        classifier = 'javadoc'
        from javadoc.outputs
    }
    artifacts.archives packageSources
    artifacts.archives packageJavadoc

    dependencies {
        implementation 'com.google.code.findbugs:jsr305:[2.0.0,4)'
        implementation 'org.slf4j:slf4j-api:[1.8.0-beta2,)'
        testImplementation 'org.hamcrest:hamcrest-core:2.2'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
        testImplementation 'org.mockito:mockito-core:[3.11.2,4)'
        testImplementation 'org.slf4j:slf4j-simple:[1.8.0-beta2,)'
    }

//    task wrap(type: OSGIWrapTask) {
//        dependsOn compileJava
//        configuration = project.configurations.implementation
//        copyExistingBundles=true
//        walkExistingBundles=true
//    }
    jar {
        from(sourceSets.main.allSource) {
            include "**/packageinfo"
        }
    }
    classes {
        copy {
            into sourceSets.main.java.outputDir
            from sourceSets.main.allSource
            include "**/packageinfo"
        }
    }


//    task bundle(type: BundleTask) {
//        dependsOn jar
//        dependsOn wrap
//        bundleClasspath = project.fileTree(wrap.bundleOutputDir).files
//        //classifier="osgi"
//        
//        manifest {
//            attributes('Export-Package': "{local-packages}",
//                    "Import-Package": "com.github.benmanes.*;resolution:=optional,*",
//                    "Bundle-SymbolicName": "${project.group}.${project.name}"
//            )
//        }
//    }

    task initPackageInfo {
        doFirst {
            sourceSets.main.allJava*.parentFile.unique().each {
                File packageInfoFile = new File(it, "packageinfo")
                if (!packageInfoFile.exists()) {
                    println "iPi ${it}"
                    def out = packageInfoFile.newPrintWriter()
                    //MavenVersion v = MavenVersion.parseMavenString(project.version.toString())
                    out.println "version 6"
                    out.close()
                }

            }
        }
    }
//    if (!(project.name in ["benchmarks"])) {
//        task japicmp(type: ArtifactJapicmpTask) {
//            description "compare project api to baselineVersion"
//            group "verification"
//            baseline = "${project.group}:${project.name}:${project.baselineVersion}"
//            to = project.jar.archivePath
//            ignoreAllMissingClasses = true
//            noAnnotations = true
//            onlyModified = true
//            failOnModification = false
//            htmlOutputFile = file("$buildDir/reports/japi.html")
//        }
//    }
}
